# ical-api

./: .pre-commit-config.yaml  README.md  pyproject.toml
ical_api/: init.py  main.py
ical_api/applications/app/: router.py
ical_api/applications/github/: issues.py
ical_api/applications/gofans/: router.py
ical_api/applications/vlrgg/: router.py
ical_api/core/: deps.py  settings.py
ical_api/core/middlewares/: json_response.py
tests/: __init__.py  routes_test.py
